samples/_failures_safe/1761601319_dc268a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f213acdc.c: In function ‘main’:
./samples/SAFE/__tmp_f213acdc.c:155:9: error: expected declaration or statement at end of input
  155 |         printf("Multiplication failed: dimension mismatch or integer overflow.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_f213acdc.c:155:9: error: expected declaration or statement at end of input
